--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello coursera</title>
+	<title>module2</title>
+	<link rel="stylesheet" type="text/css" href="CSS/st.css">
 </head>
 <body>
-<h1> hiii al azdii9a2</h1>
-<p>jjjjjjjjjjjj siiiiir yyyyyyyyyyyyy</p>
-<p>jjjjjjjjjjjj siiiiir</p>
-<p>weeeeesh al batal</p>
-<h1>ahlaaaaan</h1>
-<h1>happy</h1>
-<h1>happy</h1>
+
+<h1>Our Menu</h1>
+<div class="row">
+	<section class="col-md-6 col-lg-4"><h2 class="a">chicken</h2>
+	must implement the following breakpoints that will be considered desktop, tablet, and mobile. The browser should display a desktop version of the site when the width of the browser window is 992px and above.must implement the following breakpoints that will be considered desktop, tablet, and mobile. The browser should display a desktop version of the site when the width of the browser window is 992px and above</section>
+	<section class="col-md-6 col-lg-4"><h2 class="b">chicken</h2>You must implement the following breakpoints that will be considered desktop, tablet, and mobile. The browser should display a desktop version of the site when the width of the browser window is 992px and above.must implement the following breakpoints that will be considered desktop, tablet, and mobile. The browser should display a desktop version of the site when the width of the browser window is 992px and above</section>
+	<section class="col-md-6 col-lg-4"><h2 class="c">chicken</h2>You must implement the following breakpoints that will be considered desktop, tablet, and mobile. The browser should display a desktop version of the site when the width of the browser window is 992px and above.must implement the following breakpoints that will be considered desktop, tablet, and mobile. The browser should display a desktop version of the site when the width of the browser window is 992px and above</section>
+
+</div>
 </body>
 </html>
